@@ -2,11 +2,6 @@
 
 #include "Trace.h"
 
-#if defined (__GNUC__) && (__GNUC__ >= 3 || __GNUC_MINOR__ > 95) && \
-    (!defined (VXWORKS) || !(__GNUC__ == 2 && __GNUC_MINOR__ == 96))
-// The macros in Trace.h only work on g++ 2.96 and later.
-// But not with VxWorks g++ 2.96.
-
 // Listing 1 code/ch03
 void foo (void);
 
@@ -35,4 +30,3 @@ int ACE_TMAIN (int, ACE_TCHAR *[])
   return 0;
 }
 
-#endif /* __GNUC__ */
