@@ -1,3 +1,11 @@
+Wed Oct 27 17:47:55 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/config-g++-common.h:
+        * examples/APG/Logging/Trace.h:
+        * examples/APG/Logging/Trace_Return.cpp:
+        * examples/APG/Logging/Wrap_Macros.cpp:
+          Removed support for GCC < 3
+
 Wed Oct 27 17:40:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * docs/Download.html:
